<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Add new items using the \"+\" button</string>
    <string name="enter_item">Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_clr">Color</string>
    <string name="hint_size">Size</string>
    <string name="button_save">Save</string>
    <string name="confirmation_text">Are you sure you want to delete this item?</string>
    <string name="confirm">Yes, I\'m sure</string>
</resources>
